<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log"
            android:title="@string/nav_log" />
        <item
            android:id="@+id/nav_register"
            android:title="@string/nav_register" />
        <item android:id="@+id/nav_uxsampling"
            android:title="@string/ux_sampling" />
        <!--<item-->
        <!--android:id="@+id/nav_feedback"-->
        <!--android:icon="@drawable/ic_action_check"-->
        <!--android:title="@string/nav_feedback" />-->
        <item android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/nav_contact" />
    </group>

</menu>
