<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Frag_Settings">

   <CheckBox
       android:id="@+id/locationCheckbox"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/locationCheckbox"
       android:layout_marginTop="10pt"/>
   <Button
       android:id="@+id/locationButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/locationButton"
       android:layout_centerHorizontal="true"
       android:layout_below="@id/locationCheckbox"/>

   <EditText
       android:id="@+id/participantIDEditText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/enter_participant_id"
       android:layout_below="@id/locationButton"
       android:layout_centerHorizontal="true"/>

</RelativeLayout>