<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Frag_UXSampling">
    <LinearLayout
        android:id="@+id/UXLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_will_be_displayed_here"
            android:maxLines="1"/>
        <TextView
            android:id="@+id/editTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="✎"
            tools:ignore="HardcodedText"
            android:maxLines="1"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/UXSamplingFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/UXLinearLayout"/>
    <EditText
        android:id="@+id/UXNotesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_any_notes_you_have_about_today_here"
        android:maxLines="2"
        android:layout_below="@id/UXSamplingFrameLayout"/>
    <Button
        android:id="@+id/UXSamplingSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/UXNotesEditText"/>

</RelativeLayout>